--- a/PortalFrontend/src/app/likes/likes.component.html
+++ b/PortalFrontend/src/app/likes/likes.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-3">
   <div class="row">
     <div class="col-md-3">
-      <div class="alert alert-dismissible alert-success">
+      <div class="alert alert-dismissible alert-dark">
         <strong>{{users.length}} z {{pagination.totalItems}}</strong> Wyników
       </div>
       <div class="btn-group-vertical  btn-block ">
