--- a/PortalFrontend/src/app/nav/nav.component.css
+++ b/PortalFrontend/src/app/nav/nav.component.css
@@ -4,9 +4,11 @@
 img{
     position: absolute;
     border: rgba(255, 255, 255, 1) 8px solid;
-    max-height: 100px;
+    height: 120px;
+    width: 120px;
     border-radius: 50%;
     top:-20px;
+    transition: 2s;
     z-index: 10;
 }
 .dropdown-menu{
@@ -14,7 +16,7 @@ img{
     top: 0px!important;
     left: -140px !important;
     z-index: 9;
-   background-color:  #4bbf73!important;
+   background-color:  rgb(52, 58, 64)!important;
 }
 .dropdown-item{
     background-color:  rgb(52, 58, 64)!important;
@@ -24,4 +26,20 @@ img{
 }
 .navbar-nav{
     flex-direction: row;
+}
+.navbar{
+    transition: 1s;
+}
+.nav-small{
+    padding-top: 0px!important;
+    padding-bottom: 0px!important;
+    opacity: 0.7;
+}
+.nav-small:hover{
+    opacity: 1;
+}
+.nav-small img{
+    height: 70px;
+    border-width: 5px;
+    width: 70px;
 }
