--- a/PortalFrontend/src/app/user/users-list/users-list.component.html
+++ b/PortalFrontend/src/app/user/users-list/users-list.component.html
@@ -1,8 +1,8 @@
-<div class="container">
+<div class="container-fluid">
   <div class="row">
 
     <div class="col-md-3 mt-5">
-      <div class="alert alert-dismissible alert-success">
+      <div class="alert alert-dismissible alert-dark">
         <strong>{{users.length}} z {{page.totalItems}}</strong> Wyników
       </div>
       <h4>Sortowanie</h4>
