--- a/PortalFrontend/src/app/nav/nav.component.html
+++ b/PortalFrontend/src/app/nav/nav.component.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
   <div class="container">
-    <a class="navbar-brand" [routerLink]="['/home']">Portal</a>
+    <a class="navbar-brand" [routerLink]="['/home']">
+      <img src="../../assets/logo.svg" class="logo">
+    </a>
     <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
       aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
