Home edit bg front

--- a/PortalFrontend/src/app/app.component.html
+++ b/PortalFrontend/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-nav></app-nav>
-<div style="margin-top: 10em;">
+<!-- <div style="margin-top: 10em;"> -->
 <router-outlet></router-outlet>
-</div>
+<!-- </div> -->
