--- a/PortalFrontend/src/app/home/home.component.html
+++ b/PortalFrontend/src/app/home/home.component.html
@@ -1,13 +1,15 @@
-<div class="container">
+<div class="container-fluid container-pad home-bg text-light">
   <div *ngIf="!registerMod">
     <div style="text-align: center;">
-      <h1>Portal</h1>
-      <p class="lead">Zarejestruj się</p>
+      <img src="../../assets/logo.svg" class="logo my-5">
+      <h3 class="text-light">Zarejestruj się</h3>
     </div>
     <div class="text-center">
       <button class="btn btn-danger btn-lg m-2" (click)="register()">Rejestracja</button>
-      <button class="btn btn-info btn-lg m-2">Więcej...</button>
+      <button class="btn btn-info btn-lg m-2" (click)="toggleMore()">{{info?'Mniej':'Więcej...'}}</button>
     </div>
+      <h5 class="more text-center mx-auto mt-5 text-light" *ngIf="info">Portal PearPiar jest to portal randkowy, przeznaczony dla osób samotnych
+        oraz szukających nowych znajomości.</h5>
   </div>
 
   <div *ngIf="registerMod" class="container">
