--- a/PortalFrontend/src/app/likes/likes.component.html
+++ b/PortalFrontend/src/app/likes/likes.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-3">
+<div class="container mt-3 container-pad">
   <div class="row">
     <div class="col-md-3">
       <div class="alert alert-dismissible alert-dark">
