--- a/PortalFrontend/src/app/messages/messages.component.html
+++ b/PortalFrontend/src/app/messages/messages.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container container-pad">
   <div class="row">
     <div class="col-md-6 col-lg-5 col-sm-3 col-3 search-results" infiniteScroll
     [scrollWindow]="false"
