--- a/PortalFrontend/src/app/user/user-edit/user-edit.component.html
+++ b/PortalFrontend/src/app/user/user-edit/user-edit.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container container-pad">
   <div class="row">
     <div class="col-md-4">
     <h4>Mój profil</h4>
