--- a/PortalFrontend/src/app/user/msg-modal/msg-modal.component.html
+++ b/PortalFrontend/src/app/user/msg-modal/msg-modal.component.html
@@ -36,16 +36,16 @@
       </div>
     </div>
     <div style="position: relative; top: -45px">
-      <form #messageForm="ngForm" >
+      <form form [formGroup]="messageForm"  >
         <div class="input-group">
             <input type="text" 
                    class="form-control input-sm"
                    placeholder="wyślij prywatną wiadomość"
-                   
+                   formControlName="content"
                    name="content"
                    required>
             <div class="input-group-append">
-              <button class="btn btn-info" [disabled]="!messageForm.valid">Wyślij</button>
+              <button class="btn btn-info"  (click)="sendMsg()" [disabled]="!messageForm.valid">Wyślij</button>
             </div>
         </div>    
       </form>
