--- a/PortalFrontend/src/app/user/users-list/users-list.component.html
+++ b/PortalFrontend/src/app/user/users-list/users-list.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid container-pad">
+<div class="container container-pad">
   <div class="row">
 
     <div class="col-md-3 mt-5">
